--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,23 +1,20 @@
 <div class="container">
-  <h1>Welcome to Sinatra!</h1>
-  <p>Hello, world!</p>
+<h1>Create Account</h1>
+<%if @user %>
 
-  <table>
-    <tr>
-      <th>File Description</th>
-      <th>File Location</th>
-    </tr>
-    <tr>
-      <td>This view file</td>
-      <td><code><%= __FILE__.gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The layout file</td>
-      <td><code><%= File.expand_path('../layout.erb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The current controller</td>
-      <td><code><%= File.expand_path('../../controllers/index.rb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-  </table>
+<p>Error: <%=@user.errors%></p>
+<% end %>
+
+<form action="/create" method="post">
+  <label>Email: <input type="text" name="user[email]"></label><br>
+  <label>Password: <input type="text" name="user[raw_password]"></label><br>
+  <label>Password Confirmation: <input type="text" name="user[raw_password_confirmation]"></label>
+  <input type="submit" value="submit">
+</form>
+<h1>Login</h1>
+<form action="/login" method="post">
+  <label>Email: <input type="text" name="user[email]"></label><br>
+  <label>Password: <input type="text" name="user[password]"></label>
+  <input type="submit" value="submit">
+</form>
 </div>
