--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,10 @@
 <div class="container">
 <h1>Create Account</h1>
 <%if @user %>
-
-<p>Error: <%=@user.errors%></p>
+<% @user.errors.each do |attribute, message| %>
+<p>Error: <%=attribute%> <%=message%></p>
 <% end %>
-
+<% end %>
 <form action="/create" method="post">
   <label>Email: <input type="text" name="user[email]"></label><br>
   <label>Password: <input type="text" name="user[raw_password]"></label><br>
@@ -14,7 +14,7 @@
 <h1>Login</h1>
 <form action="/login" method="post">
   <label>Email: <input type="text" name="user[email]"></label><br>
-  <label>Password: <input type="text" name="user[password]"></label>
+  <label>Password: <input type="text" name="user[raw_password]"></label>
   <input type="submit" value="submit">
 </form>
 </div>
