--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,14 +7,14 @@
 <% end %>
 <form action="/create" method="post">
   <label>Email: <input type="text" name="user[email]"></label><br>
-  <label>Password: <input type="text" name="user[raw_password]"></label><br>
-  <label>Password Confirmation: <input type="text" name="user[raw_password_confirmation]"></label>
+  <label>Password: <input type="password" name="user[raw_password]"></label><br>
+  <label>Password Confirmation: <input type="password" name="user[raw_password_confirmation]"></label>
   <input type="submit" value="submit">
 </form>
 <h1>Login</h1>
 <form action="/login" method="post">
   <label>Email: <input type="text" name="user[email]"></label><br>
-  <label>Password: <input type="text" name="user[raw_password]"></label>
+  <label>Password: <input type="password" name="user[raw_password]"></label>
   <input type="submit" value="submit">
 </form>
 </div>
