--- a/app/views/_new_url.erb
+++ b/app/views/_new_url.erb
@@ -4,6 +4,6 @@
 <% end %>
 <% end %>
 <form action='/url/create' method='post'>
-  <label>Enter URL: <input type='text' name='url[original]' placeholder="Your URL"></label>
-  <input type='submit' value='Submit'>
+  <label><input type='text' name='url[original]' placeholder="Enter URL"></label>
+  <input class='btn' type='submit' value='Create Short URL'>
 </form>
